--- a/AC_SICMOS/AC_SICMOS.runs/impl_1/usage_statistics_webtalk.html
+++ b/AC_SICMOS/AC_SICMOS.runs/impl_1/usage_statistics_webtalk.html
@@ -4,11 +4,11 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>2405991</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Wed Sep 22 22:10:50 2021</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Wed Sep 29 16:24:37 2021</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>LIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>Vivado v2018.3 (64-bit)</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>e1b2ca487ffc4964a5fdf2823f062b72</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>8</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>10</TD>
   <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>28e1efad34f65fefbc0d7fcb06be08ec</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>28e1efad34f65fefbc0d7fcb06be08ec</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>TRUE</TD>
@@ -21,7 +21,7 @@
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>user_environment</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>cpu_name</B></TD><TD>Intel(R) Core(TM) i7-7700HQ CPU @ 2.80GHz</TD>
-  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>1494.512 MHz</TD>
+  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>2204.331 MHz</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>os_name</B></TD><TD>Ubuntu</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_release</B></TD><TD>Ubuntu 16.04.7 LTS</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>system_ram</B></TD><TD>24.000 GB</TD>
@@ -34,8 +34,8 @@
 <TR ALIGN='LEFT'>   <TD>addsrcwizard_specify_or_create_constraint_files=1</TD>
    <TD>basedialog_cancel=8</TD>
    <TD>basedialog_no=1</TD>
-   <TD>basedialog_ok=50</TD>
-</TR><TR ALIGN='LEFT'>   <TD>basedialog_yes=9</TD>
+   <TD>basedialog_ok=60</TD>
+</TR><TR ALIGN='LEFT'>   <TD>basedialog_yes=13</TD>
    <TD>closeplanner_yes=2</TD>
    <TD>cmdmsgdialog_messages=5</TD>
    <TD>cmdmsgdialog_ok=1</TD>
@@ -46,90 +46,98 @@
 </TR><TR ALIGN='LEFT'>   <TD>createconstraintsfilepanel_file_name=2</TD>
    <TD>createsrcfiledialog_file_name=10</TD>
    <TD>expruntreepanel_exp_run_tree_table=6</TD>
-   <TD>filesetpanel_file_set_panel_tree=50</TD>
-</TR><TR ALIGN='LEFT'>   <TD>flownavigatortreepanel_flow_navigator_tree=51</TD>
+   <TD>filesetpanel_file_set_panel_tree=61</TD>
+</TR><TR ALIGN='LEFT'>   <TD>flownavigatortreepanel_flow_navigator_tree=64</TD>
    <TD>fpgachooser_fpga_table=1</TD>
    <TD>gettingstartedview_clear_list=1</TD>
    <TD>gettingstartedview_create_new_project=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_checkpoint=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>instancemenu_floorplanning=1</TD>
+   <TD>mainmenumgr_checkpoint=2</TD>
    <TD>mainmenumgr_edit=6</TD>
-   <TD>mainmenumgr_export=2</TD>
-   <TD>mainmenumgr_file=8</TD>
-</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_flow=2</TD>
-   <TD>mainmenumgr_import=1</TD>
-   <TD>mainmenumgr_ip=1</TD>
-   <TD>mainmenumgr_project=4</TD>
-</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_reports=6</TD>
-   <TD>mainmenumgr_text_editor=1</TD>
+   <TD>mainmenumgr_export=3</TD>
+</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_file=12</TD>
+   <TD>mainmenumgr_flow=2</TD>
+   <TD>mainmenumgr_import=2</TD>
+   <TD>mainmenumgr_ip=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_project=6</TD>
+   <TD>mainmenumgr_reports=6</TD>
+   <TD>mainmenumgr_text_editor=2</TD>
    <TD>mainmenumgr_tools=6</TD>
-   <TD>mainmenumgr_view=3</TD>
-</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_window=6</TD>
+</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_view=3</TD>
+   <TD>mainmenumgr_window=6</TD>
    <TD>mainwinmenumgr_layout=4</TD>
    <TD>msgtreepanel_message_severity=1</TD>
-   <TD>msgtreepanel_message_view_tree=10</TD>
-</TR><TR ALIGN='LEFT'>   <TD>numjobschooser_number_of_jobs=1</TD>
-   <TD>pacommandnames_add_sources=8</TD>
-   <TD>pacommandnames_auto_connect_target=4</TD>
+</TR><TR ALIGN='LEFT'>   <TD>msgtreepanel_message_view_tree=10</TD>
+   <TD>netlistschmenuandmouse_expand_collapse=3</TD>
+   <TD>netlistschmenuandmouse_view=8</TD>
+   <TD>numjobschooser_number_of_jobs=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_add_sources=8</TD>
+   <TD>pacommandnames_auto_connect_target=6</TD>
    <TD>pacommandnames_auto_update_hier=6</TD>
-</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_close_project=1</TD>
-   <TD>pacommandnames_exit=1</TD>
-   <TD>pacommandnames_open_hardware_manager=3</TD>
+   <TD>pacommandnames_close_project=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_exit=2</TD>
+   <TD>pacommandnames_open_hardware_manager=4</TD>
    <TD>pacommandnames_open_in_new_window_rtl=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_open_project=1</TD>
+   <TD>pacommandnames_open_project=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_open_rtl_design=1</TD>
    <TD>pacommandnames_ports_window=1</TD>
    <TD>pacommandnames_reload_rtl_design=5</TD>
    <TD>pacommandnames_run_bitgen=1</TD>
 </TR><TR ALIGN='LEFT'>   <TD>pacommandnames_tcl_console_window=1</TD>
    <TD>paviews_ip_catalog=1</TD>
-   <TD>paviews_project_summary=8</TD>
-   <TD>programdebugtab_open_target=3</TD>
-</TR><TR ALIGN='LEFT'>   <TD>programdebugtab_program_device=7</TD>
-   <TD>programfpgadialog_program=9</TD>
+   <TD>paviews_project_summary=12</TD>
+   <TD>programdebugtab_open_target=6</TD>
+</TR><TR ALIGN='LEFT'>   <TD>programdebugtab_program_device=14</TD>
+   <TD>programfpgadialog_program=17</TD>
    <TD>progressdialog_background=1</TD>
    <TD>projectnamechooser_choose_project_location=1</TD>
 </TR><TR ALIGN='LEFT'>   <TD>projectnamechooser_project_name=1</TD>
    <TD>rdicommands_custom_commands=3</TD>
    <TD>rdicommands_delete=2</TD>
    <TD>removesourcesdialog_also_delete=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>signaltreepanel_signal_tree_table=38</TD>
-   <TD>simpleoutputproductdialog_generate_output_products_immediately=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>schmenuandmouse_expand_cone=3</TD>
+   <TD>selectmenu_highlight=2</TD>
+   <TD>selectmenu_mark=5</TD>
+   <TD>signaltreepanel_signal_tree_table=38</TD>
+</TR><TR ALIGN='LEFT'>   <TD>simpleoutputproductdialog_generate_output_products_immediately=2</TD>
    <TD>srcchooserpanel_create_file=6</TD>
    <TD>srcmenu_ip_hierarchy=5</TD>
-</TR><TR ALIGN='LEFT'>   <TD>syntheticagettingstartedview_recent_projects=4</TD>
-   <TD>taskbanner_close=1</TD>
+   <TD>syntheticagettingstartedview_recent_projects=6</TD>
+</TR><TR ALIGN='LEFT'>   <TD>taskbanner_close=1</TD>
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>java_command_handlers</B></TD></TR>
 <TR ALIGN='LEFT'>   <TD>addsources=8</TD>
-   <TD>autoconnecttarget=4</TD>
-   <TD>closeproject=1</TD>
+   <TD>autoconnecttarget=6</TD>
+   <TD>closeproject=2</TD>
    <TD>coreview=1</TD>
 </TR><TR ALIGN='LEFT'>   <TD>customizecore=1</TD>
    <TD>editdelete=2</TD>
-   <TD>launchprogramfpga=10</TD>
-   <TD>newproject=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>openhardwaremanager=12</TD>
+   <TD>fileexit=1</TD>
+   <TD>launchprogramfpga=15</TD>
+</TR><TR ALIGN='LEFT'>   <TD>newproject=1</TD>
+   <TD>openhardwaremanager=17</TD>
    <TD>openinnewwindowrtlanalysis=1</TD>
    <TD>openproject=1</TD>
-   <TD>openrecenttarget=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>programdevice=5</TD>
+</TR><TR ALIGN='LEFT'>   <TD>openrecenttarget=1</TD>
+   <TD>programdevice=6</TD>
    <TD>recustomizecore=1</TD>
    <TD>reloaddesign=5</TD>
-   <TD>reportdrc=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>reportmethodology=1</TD>
-   <TD>runbitgen=13</TD>
+</TR><TR ALIGN='LEFT'>   <TD>reportdrc=1</TD>
+   <TD>reportmethodology=1</TD>
+   <TD>runbitgen=16</TD>
    <TD>runimplementation=2</TD>
-   <TD>runsynthesis=2</TD>
-</TR><TR ALIGN='LEFT'>   <TD>savedesign=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>runsynthesis=2</TD>
+   <TD>savedesign=2</TD>
    <TD>showview=7</TD>
    <TD>toolssettings=1</TD>
-   <TD>viewtaskimplementation=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>viewtaskprojectmanager=4</TD>
-   <TD>viewtaskrtlanalysis=9</TD>
+</TR><TR ALIGN='LEFT'>   <TD>viewtaskimplementation=1</TD>
+   <TD>viewtaskprojectmanager=5</TD>
+   <TD>viewtaskrtlanalysis=10</TD>
 </TR>  </TABLE>
 </TR><TR ALIGN='LEFT'>  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>other_data</B></TD></TR>
-<TR ALIGN='LEFT'>   <TD>guimode=6</TD>
+<TR ALIGN='LEFT'>   <TD>guimode=8</TD>
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>project_data</B></TD></TR>
@@ -174,8 +182,8 @@
     <TD>fdpe=7</TD>
 </TR><TR ALIGN='LEFT'>    <TD>gnd=2</TD>
     <TD>ibuf=10</TD>
-    <TD>lut1=9</TD>
-    <TD>lut2=16</TD>
+    <TD>lut1=8</TD>
+    <TD>lut2=15</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut3=18</TD>
     <TD>lut4=31</TD>
     <TD>lut5=14</TD>
@@ -194,8 +202,8 @@
     <TD>fdpe=7</TD>
 </TR><TR ALIGN='LEFT'>    <TD>gnd=2</TD>
     <TD>ibuf=10</TD>
-    <TD>lut1=9</TD>
-    <TD>lut2=16</TD>
+    <TD>lut1=8</TD>
+    <TD>lut2=15</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut3=18</TD>
     <TD>lut4=31</TD>
     <TD>lut5=14</TD>
@@ -312,7 +320,7 @@
     <TD>bidir_output_enable=1.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>board_layers=8to11 (8 to 11 Layers)</TD>
     <TD>board_selection=medium (10&quot;x10&quot;)</TD>
-    <TD>clocks=0.001621</TD>
+    <TD>clocks=0.001626</TD>
     <TD>confidence_level_clock_activity=High</TD>
 </TR><TR ALIGN='LEFT'>    <TD>confidence_level_design_state=High</TD>
     <TD>confidence_level_device_models=High</TD>
@@ -334,7 +342,7 @@
     <TD>i/o=0.014638</TD>
     <TD>input_toggle=12.500000</TD>
     <TD>junction_temp=27.6 (C)</TD>
-</TR><TR ALIGN='LEFT'>    <TD>logic=0.000102</TD>
+</TR><TR ALIGN='LEFT'>    <TD>logic=0.000096</TD>
     <TD>mgtavcc_dynamic_current=0.000000</TD>
     <TD>mgtavcc_static_current=0.000000</TD>
     <TD>mgtavcc_total_current=0.000000</TD>
@@ -355,7 +363,7 @@
     <TD>output_load=5.000000</TD>
     <TD>output_toggle=12.500000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>package=clg400</TD>
-    <TD>pct_clock_constrained=0.730000</TD>
+    <TD>pct_clock_constrained=0.740000</TD>
     <TD>pct_inputs_defined=10</TD>
     <TD>platform=lin64</TD>
 </TR><TR ALIGN='LEFT'>    <TD>process=typical</TD>
@@ -364,7 +372,7 @@
     <TD>read_saif=False</TD>
 </TR><TR ALIGN='LEFT'>    <TD>set/reset_probability=0.000000</TD>
     <TD>signal_rate=False</TD>
-    <TD>signals=0.000123</TD>
+    <TD>signals=0.000125</TD>
     <TD>simulation_file=None</TD>
 </TR><TR ALIGN='LEFT'>    <TD>speedgrade=-2</TD>
     <TD>static_prob=False</TD>
@@ -395,7 +403,7 @@
     <TD>vccbram_voltage=1.000000</TD>
     <TD>vccint_dynamic_current=0.002277</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vccint_static_current=0.007814</TD>
-    <TD>vccint_total_current=0.010090</TD>
+    <TD>vccint_total_current=0.010091</TD>
     <TD>vccint_voltage=1.000000</TD>
     <TD>vcco12_dynamic_current=0.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vcco12_static_current=0.000000</TD>
@@ -566,9 +574,9 @@
 </TR><TR ALIGN='LEFT'>    <TD>ibuf_functional_category=IO</TD>
     <TD>ibuf_used=10</TD>
     <TD>lut1_functional_category=LUT</TD>
-    <TD>lut1_used=9</TD>
+    <TD>lut1_used=8</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut2_functional_category=LUT</TD>
-    <TD>lut2_used=16</TD>
+    <TD>lut2_used=15</TD>
     <TD>lut3_functional_category=LUT</TD>
     <TD>lut3_used=18</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut4_functional_category=LUT</TD>
@@ -631,23 +639,23 @@
     <TD>lut_as_shift_register_fixed=0</TD>
     <TD>lut_as_shift_register_used=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_in_front_of_the_register_is_unused_fixed=0</TD>
-    <TD>lut_in_front_of_the_register_is_unused_used=4</TD>
-    <TD>lut_in_front_of_the_register_is_used_fixed=4</TD>
-    <TD>lut_in_front_of_the_register_is_used_used=3</TD>
-</TR><TR ALIGN='LEFT'>    <TD>register_driven_from_outside_the_slice_fixed=3</TD>
-    <TD>register_driven_from_outside_the_slice_used=7</TD>
-    <TD>register_driven_from_within_the_slice_fixed=7</TD>
-    <TD>register_driven_from_within_the_slice_used=97</TD>
+    <TD>lut_in_front_of_the_register_is_unused_used=6</TD>
+    <TD>lut_in_front_of_the_register_is_used_fixed=6</TD>
+    <TD>lut_in_front_of_the_register_is_used_used=4</TD>
+</TR><TR ALIGN='LEFT'>    <TD>register_driven_from_outside_the_slice_fixed=4</TD>
+    <TD>register_driven_from_outside_the_slice_used=10</TD>
+    <TD>register_driven_from_within_the_slice_fixed=10</TD>
+    <TD>register_driven_from_within_the_slice_used=94</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_available=13300</TD>
     <TD>slice_fixed=0</TD>
     <TD>slice_registers_available=106400</TD>
     <TD>slice_registers_fixed=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_registers_used=104</TD>
     <TD>slice_registers_util_percentage=0.10</TD>
-    <TD>slice_used=35</TD>
-    <TD>slice_util_percentage=0.26</TD>
+    <TD>slice_used=37</TD>
+    <TD>slice_util_percentage=0.28</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slicel_fixed=0</TD>
-    <TD>slicel_used=27</TD>
+    <TD>slicel_used=29</TD>
     <TD>slicem_fixed=0</TD>
     <TD>slicem_used=8</TD>
 </TR><TR ALIGN='LEFT'>    <TD>unique_control_sets_available=13300</TD>
@@ -655,11 +663,11 @@
     <TD>unique_control_sets_used=10</TD>
     <TD>unique_control_sets_util_percentage=0.08</TD>
 </TR><TR ALIGN='LEFT'>    <TD>using_o5_and_o6_fixed=0.08</TD>
-    <TD>using_o5_and_o6_used=28</TD>
-    <TD>using_o5_output_only_fixed=28</TD>
+    <TD>using_o5_and_o6_used=26</TD>
+    <TD>using_o5_output_only_fixed=26</TD>
     <TD>using_o5_output_only_used=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>using_o6_output_only_fixed=0</TD>
-    <TD>using_o6_output_only_used=58</TD>
+    <TD>using_o6_output_only_used=60</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
@@ -744,10 +752,10 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>elapsed=00:00:15s</TD>
+<TR ALIGN='LEFT'>    <TD>elapsed=00:00:13s</TD>
     <TD>hls_ip=0</TD>
-    <TD>memory_gain=495.789MB</TD>
-    <TD>memory_peak=1877.641MB</TD>
+    <TD>memory_gain=525.258MB</TD>
+    <TD>memory_peak=1877.574MB</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
